--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Test blog
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
+  이 사이트를 잘 표현할 수 있는 멋진 문구를 적어보세요. _config.yml에서 이 부분을 수정할 수 있어요. 
+  이 부분은 문서 헤드 메타(구글 검색 결과를 위한)와 feed.xml 사이트 설명에 나타나요.
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+github_username:  gsongson
 
 # Build settings
 theme: minima
