--- a/_config.yml
+++ b/_config.yml
@@ -21,15 +21,12 @@
 title: Test blog
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  이 사이트를 잘 표현할 수 있는 멋진 문구를 적어보세요. _config.yml에서 이 부분을 수정할 수 있어요. 
-  이 부분은 문서 헤드 메타(구글 검색 결과를 위한)와 feed.xml 사이트 설명에 나타나요.
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  이 사이트를 잘 표현할 수 있는 멋진 문구를 적어 보세요. _config.yml에서 문구를 수정할 수 있어요. 
+  여기에 적은 문구는 문서 헤드 메타(구글 검색 결과를 위한)와 feed.xml 사이트 설명에 나타나요.
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  gsongson
+github_username: gsongson
 
 # Build settings
 theme: minima
